infrastructure/bootstrap/infrastructure/mail/controller/overlays/fundament-poc/ingress-mailsink.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rig-mail-sink
  namespace: rig-ron
  annotations:
    cert-manager.io/issuer: letsencrypt-mailsink
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "384"
    cert-manager.io/private-key-rotation-policy: Always
spec:
  ingressClassName: nginx
  rules:
    - host: mailsink.fundament-poc.rijksapp.dev
      http:
        paths:
          - backend:
              service:
                name: rig-mail-sink
                port:
                  number: 8025
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - mailsink.fundament-poc.rijksapp.dev
      secretName: mailsink-fundament-poc-tls
